# HuffmanZip

./: BitStreamReader.cpp  BitStreamReader.h  BitStreamWriter.cpp  BitStreamWriter.h  CMakeLists.txt  FileReaderUtil.cpp  FileReaderUtil.h  FileWriterUtil.cpp  FileWriterUtil.h  TEST.huff  TEST.png.huff  huffmannode.cpp  huffmannode.h  huffmantree.cpp  huffmantree.h  main.cpp  mainwindow.cpp  mainwindow.h  ziputil.cpp  ziputil.h
TESTOUT/: TEST.huff  enTEST.huff  enTESTDir.huff
